What an embarrassing typo...

--- a/ColerfulCommands/src/plugin.yml
+++ b/ColerfulCommands/src/plugin.yml
@@ -1,6 +1,6 @@
-name: ColerfulCommands
-main: de.themoep.ColerfulCommands.ColerfulCommands
-version: 0.1
+name: ColorfulCommands
+main: de.themoep.ColorfulCommands.ColorfulCommands
+version: 0.1.1
 description: Provides a wrapper command to use color codes in every command
 author: Phoenix616
 website: www.themoep.de
@@ -9,9 +9,9 @@ commands:
       aliases: [colorcommand, convertcolors]
       description: Wrapper command
       usage: /<command> command arguments
-      permission: colerfulcommands.use
+      permission: colorfulcommands.use
       permission-message: You don't have the permission <permission>
 permissions:
-   colerfulcommands.use:
+   colorfulcommands.use:
       description: Gives permission to the command
       default: op
